syntax = "proto3";
package v1.application;
option go_package = "github.com/ecojuntak/laklak/application";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "buf/validate/validate.proto";

message Application {
  int32 id = 1;
  int32 team_id = 2;
  string name = 3;
}

message CreateRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED, (buf.validate.field).string.min_len = 2];
  int32 team_id = 2 [(google.api.field_behavior) = REQUIRED, (buf.validate.field).required = true];
}
message CreateResponse {
  string message = 1;
}

message GetApplicationsRequest {}
message GetApplicationsResponse {
  repeated Application applications = 1;
}

message GetApplicationRequest {
  int32 id = 1 [(google.api.field_behavior) = REQUIRED, (buf.validate.field).required = true];
}
message GetApplicationResponse {
  Application team = 1;
}

service ApplicationService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/applications"
      body: "*"
    };
  }

  rpc GetApplications(GetApplicationsRequest) returns (GetApplicationsResponse) {
    option (google.api.http) = {
      get: "/api/v1/applications"
    };
  }

  rpc GetApplication(GetApplicationRequest) returns (GetApplicationResponse) {
    option (google.api.http) = {
      get: "/api/v1/applications/{id}"
    };
  }
}
